<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/whispTargetBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:text="@string/whispTargetBtn" />

    <Button
        android:id="@+id/wizzTargetBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:layout_below="@+id/whispTargetBtn"
        android:text="@string/wizzTargetBtn" />

    <Button
        android:id="@+id/mapPopupBackBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="45sp"
        android:text="@string/backTargetBtn" />

</RelativeLayout>