<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_light">
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/background_dark" >

        <TextView
            android:id="@+id/popupFileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="3dip"
            android:text="@string/popupFileTitle" />

        <TextView
            android:id="@+id/popupFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popupFileTitle"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="3dip"
            android:text="@string/popupFileName" />
        
        <Button
            android:id="@+id/acceptFileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/popupFileName"
            android:text="@string/acceptFileBtn" />

        <Button
            android:id="@+id/refuseFileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/acceptFileBtn"
            android:layout_toLeftOf="@+id/acceptFileBtn"
            android:text="@string/refuseFileBtn" />
    </RelativeLayout>

</LinearLayout>